Оптимизирован образ-докер для realtime котировок